# CTR_Derivative_Propagation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ctr_library/: CMakeLists.txt
ctr_library/include/: CTR.hpp  ODESystem.hpp  Observer.hpp  Segment.hpp  Tube.hpp  mathOperations.hpp
ctr_library/src/: CTR.cpp  ODESystem.cpp  Segment.cpp  Tube.cpp
executable/: CMakeLists.txt  Main.cpp
